# TsetlinMachine

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: mnist.rs  xor.rs
